pkgs/artifacts/tests/cli/snapshots/tests__cli__integration_tests__cli_help.snap
---
source: tests/cli/integration_tests.rs
info:
  program: artifacts
  args:
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
TUI for managing NixOS Artifacts

Usage: artifacts [OPTIONS] [FLAKE]

Arguments:
  [FLAKE]
          Path to flake directory (default: current directory)

Options:
      --machine <MACHINE>
          Filter by machine name (repeatable)

      --home <HOME>
          Filter by home-manager user (repeatable)

      --artifact <ARTIFACT>
          Filter by artifact name (repeatable)

      --log-file <PATH>
          Path to log file for debug output

      --log-level <LOG_LEVEL>
          Set the logging level (requires --log-file)

          Possible values:
          - error: Error messages only
          - warn:  Warnings and errors
          - info:  Informational messages
          - debug: Debug output (most verbose)
          
          [default: debug]

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

----- stderr -----
