pkgs/artifacts/tests/cli/snapshots/tests__cli__integration_tests__cli_no_args_shows_error.snap
---
source: tests/cli/integration_tests.rs
info:
  program: artifacts
  args: []
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
backend.toml not found. Set NIXOS_ARTIFACTS_BACKEND_CONFIG or place backend.toml in the flake directory: <REDACTED_PATH>
