pkgs/artifacts/tests/cli/snapshots/tests__cli__integration_tests__cli_version.snap
---
source: tests/cli/integration_tests.rs
info:
  program: artifacts
  args:
    - "--version"
---
success: true
exit_code: 0
----- stdout -----
artifacts 4.0.0

----- stderr -----
