pkgs/artifacts/tests/cli/snapshots/tests__cli__integration_tests__cli_with_machine_filter.snap
---
source: tests/cli/integration_tests.rs
info:
  program: artifacts
  args:
    - "--machine"
    - test-machine
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
backend.toml not found. Set NIXOS_ARTIFACTS_BACKEND_CONFIG or place backend.toml in the flake directory: <REDACTED_PATH>
